整形　非公開

--- a/project/projects_a.html
+++ b/project/projects_a.html
@@ -81,6 +81,6 @@
         </div>
     </div>
 
-    <p>※ユーザー投稿を扱うためセキュリティ要件を厳守しており、関連コードの詳細は非公開です。</p>
+    <p>※ユーザー投稿を取り扱うためセキュリティ要件が伴うため、関連コードは非公開としています。詳細はお問い合わせください。</p>
 
 </div>
