--- a/project/projects_b.html
+++ b/project/projects_b.html
@@ -57,23 +57,23 @@
             <div class="accordion-header">課題・工夫</div>
             <div class="accordion-content">
                 <p>
-                    対立や競争を促しながらも攻撃的・排他的にならない、ユーモラスなデザイン設計で統一することに苦心しました。ポストに使用できる文字はひらカナ英数字に厳選し、絶えずシュールな雰囲気を忘れないようにしました。世界観やアニメ風にディフォルメし、ユーザーの分身となるキャラクターはちびキャラにしました。</p>
+                    対立や競争を促しながらも攻撃的・排他的にならない、ユーモラスなデザイン設計で統一することに苦心しました。ポストに使用できる文字はひらカナ英数字に厳選し、絶えずシュールな雰囲気を忘れないようにしました。世界観やアニメ風にディフォルメし、ユーザーの分身となるキャラクターはちびキャラにしました。
+                </p>
             </div>
         </div>
 
-<div class="accordion-section">
-    <div class="accordion-header">制作目的</div>
-    <div class="accordion-content">
-        <p>
-            「自分好みのSNSを作ってみたい」という構想を、プログラミング学習の一環として形にしました。既存SNSの単なる模倣ではなく、“ゲーム性”や“社会性”といった要素を取り入れ、独自の設計を意識しています。
-        </p>
-        <p>
-            元々は、他のユーザーにゲーム的な攻撃ができるSNSとして赤組白組に分かれて楽しむ運動会を舞台にしたSNSを構想していましたが、アイコンの仮画像として使っていたきのこのイラストがきっかけで、「きのこたけのこ戦争」をテーマにした国家対立型SNSへと路線変更しました。
-        </p>
-    </div>
-</div>
+        <div class="accordion-section">
+            <div class="accordion-header">制作目的</div>
+            <div class="accordion-content">
+                <p>
+                    「自分好みのSNSを作ってみたい」という構想を、プログラミング学習の一環として形にしました。既存SNSの単なる模倣ではなく、“ゲーム性”や“社会性”といった要素を取り入れ、独自の設計を意識しています。
+                </p>
+                <p>
+                    元々は、他のユーザーにゲーム的な攻撃ができるSNSとして赤組白組に分かれて楽しむ運動会を舞台にしたSNSを構想していましたが、アイコンの仮画像として使っていたきのこのイラストがきっかけで、「きのこたけのこ戦争」をテーマにした国家対立型SNSへと路線変更しました。
+                </p>
+            </div>
+        </div>
 
     </div>
-
     <p>※ユーザー投稿を取り扱うためセキュリティ要件が伴うため、関連コードは非公開としています。詳細はお問い合わせください。</p>
 </div>
