--- a/project/projects_c.html
+++ b/project/projects_c.html
@@ -59,15 +59,15 @@
             </div>
         </div>
 
-<div class="accordion-section">
-    <div class="accordion-header">制作目的</div>
-    <div class="accordion-content">
-        <p>
-            妻のイラストを多くの人に見てもらいたいという思いから制作しました。当初はイラストをただ並べるだけのシンプルなアトリエページを考えていましたが、妻の世界観をより深く伝えるために、深海への潜航というコンセプトを取り入れた没入感のあるデザインにしました。
-        </p>
-    </div>
-</div>
+        <div class="accordion-section">
+            <div class="accordion-header">制作目的</div>
+            <div class="accordion-content">
+                <p>
+                    妻のイラストを多くの人に見てもらいたいという思いから制作しました。当初はイラストをただ並べるだけのシンプルなアトリエページを考えていましたが、妻の世界観をより深く伝えるために、深海への潜航というコンセプトを取り入れた没入感のあるデザインにしました。
+                </p>
+            </div>
+        </div>
 
     </div>
-
+    <p>※関連コードは非公開としています。詳細はお問い合わせください。</p>
 </div>
