--- a/project/projects_d.html
+++ b/project/projects_d.html
@@ -56,15 +56,15 @@
             </div>
         </div>
 
-<div class="accordion-section">
-    <div class="accordion-header">制作目的</div>
-    <div class="accordion-content">
-        <p>
-            令和7年全国アビリンピック、ホームページ部門の事前課題作品として制作しました。防災情報の啓発を目的とした団体のWEBサイトを想定し、正確な情報提供と分かりやすいデザインを心がけました。
-        </p>
-    </div>
-</div>
+        <div class="accordion-section">
+            <div class="accordion-header">制作目的</div>
+            <div class="accordion-content">
+                <p>
+                    令和7年全国アビリンピック、ホームページ部門の事前課題作品として制作しました。防災情報の啓発を目的とした団体のWEBサイトを想定し、正確な情報提供と分かりやすいデザインを心がけました。
+                </p>
+            </div>
+        </div>
 
     </div>
-
+    <p>※関連コードは非公開としています。詳細はお問い合わせください。</p>
 </div>
