--- a/project/projects_d.html
+++ b/project/projects_d.html
@@ -15,7 +15,7 @@
             <div class="accordion-header">プロジェクト概要</div>
             <div class="accordion-content">
                 <p>
-                    令和7年全国アビリンピック、ホームページ部門の事前課題作品です。
+                    令和7年全国アビリンピック、ホームページ部門の事前課題作品です。宮城県にある架空の街「千羽市」を舞台に、防災情報の啓発を目的としたWEBサイトを制作しました。公的な一次情報を正確に紹介し、ユーザーが必要な防災情報にアクセスしやすいデザインを心がけました。
                 </p>
             </div>
         </div>
@@ -33,7 +33,8 @@
             <div class="accordion-header">ユーザー体験の流れ</div>
             <div class="accordion-content">
                 <ol>
-                    <li>数ある防災情報の中からを読むことができる。</li>
+                    <li>数ある防災情報の中から推奨される防災情報を知ることができる。</li>
+                    <li>防災リーダーやBPOなど、防災意識の中でも特に重要なことを知ることができる。</li>
                     <li>千羽市の被害状況や団体発足の経緯を知ることができる。</li>
                 </ol>
             </div>
@@ -52,7 +53,7 @@
             <div class="accordion-header">課題・工夫</div>
             <div class="accordion-content">
                 <p>
-                    団体の経験則に基づく言葉と、公的な一次情報のバランスが課題でした。アクセシビリティは基本を徹底しました。</p>
+                    団体の経験則に基づく言葉と、公的な一次情報のバランスが課題でした。アクセシビリティは基本を徹底しました。日々の更新作業は団体のメンバー（非エンジニア）が継続するものと想定し、ページの追加を単純化しました。</p>
             </div>
         </div>
 
