--- a/index.html
+++ b/index.html
@@ -15,19 +15,20 @@
     </div>
     <header>
         <h1 id="main-title">KN5310-works</h1>
-        <p>I'm aiming to be a Frontend Engineer! Using AI coding tools to build all kinds of cool stuff!</p>
     </header>
 
     <section id="skills">
         <h2>Skillset</h2>
         <ul>
-            <li>HTML5 / CSS3 / JavaScript (ES6+)</li>
+            <li>HTML5 / CSS3 / JavaScript</li>
             <li>Vue.js</li>
             <li>Python / Flask</li>
+            <li>PHP</li>
             <li>Git / GitHub</li>
             <li>SQLite / MySQL</li>
-            <li>AIコーディング支援（ChatGPT / Grokなど）</li>
+            <li>AIコーディング活用</li>
         </ul>
+        <p>※現在も鋭意スキルアップ中です！</p>
     </section>
 
     <section id="projects">
